# mada_reader_python

./: README.md  pyproject.toml
mada_reader/: cli.py  files.py  parser.py  vis.py
mada_reader/models/: mada_config.py
mada_reader/pyroot_lib/: clock_hist.py  util.py
mada_reader/rootfile_generator/: gbkb.py
tests/: test_cli.py  test_files.py  test_mada_reader.py  test_parser.py
tests/models/: test_mada_config.py
