[tool.poetry]
name = "mada_reader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}
bitstruct = "^8.15.1"
pydantic = "^1.10.2"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
datamodel-code-generator = "^0.13.5"
nptyping = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
